--- a/challenge_2/package.json
+++ b/challenge_2/package.json
@@ -15,12 +15,14 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "express": "^4.16.3",
+    "jquery": "^3.3.1",
     "mongoose": "^5.0.13",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "webpack": "^4.5.0"
   },
   "devDependencies": {
+    "body-parser": "^1.18.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.10.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
