--- a/challenge_3/package.json
+++ b/challenge_3/package.json
@@ -1,28 +1,17 @@
 {
-  "name": "challenge_3",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "watch": "./node_modules/.bin/webpack -d --watch",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/server.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.10.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
-    "webpack-cli": "^2.0.14"
-  },
+  "name": "my-app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "webpack": "^4.5.0"
+    "react-redux": "^5.0.7",
+    "react-scripts": "1.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
